--- a/SignMeUp/Content/Site.css
+++ b/SignMeUp/Content/Site.css
@@ -29,3 +29,58 @@ textarea {
         padding: 0;
     }
 }
+/* Login Page */
+
+.login-box {
+    background-color:lightgrey;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px; /* this is half the height of your div*/
+    margin-left: -100px; /*this is half of width of your div*/
+    padding:20px;
+
+
+}
+
+.login-table td{
+    vertical-align:text-top;
+}
+
+
+/*Styling for the overtime opportunity class*/
+
+#overtimeTable td:hover {
+    color: blue;
+}
+
+#overtimeTable {
+    margin: auto;
+}
+
+#overtimeTable td{
+    padding:20px;
+}
+
+
+/* Styling for the help bot*/
+#bot-box{
+    position: fixed;
+    bottom: 0;
+    right:50px;
+    min-width:200px;
+    max-width:200px;
+
+ }
+ #bot-box p {
+        padding:5px;
+        border-radius: 15px;
+        background-color: lightblue;
+    }
+#bot-box p:hover {
+    background-color: antiquewhite;
+}
+
+#bot-box img{
+    border-radius:50%;
+}
