--- a/SignMeUp/Site.Master
+++ b/SignMeUp/Site.Master
@@ -4,9 +4,10 @@
 
 <html lang="en">
 <head runat="server">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - View and Request Overtime Opportunities</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -47,13 +48,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">SignMeUp</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/">View Available Overtime</a></li>
+                        <li><a runat="server" href="~/manageOvertime.aspx">Administer Overtime</a></li>
+                        <li><a runat="server" href="~/FAQ.aspx">Overtime F.A.Q.s</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +64,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                
             </footer>
         </div>
 
