--- a/SignMeUp/ManagerMaster.Master
+++ b/SignMeUp/ManagerMaster.Master
@@ -53,7 +53,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/manageOvertime.aspx">View or Cancel Available Overtime</a></li>
-                        <li><a runat="server" href="~/addMenu.aspx">Add New Overtime</a></li>
+                        <li><a runat="server" href="~/addOvertime.aspx">Add New Overtime</a></li>
                         <li><a runat="server" href="~/FAQ.aspx">Overtime F.A.Q.s</a></li>
                     </ul>
                 </div>
